# JagolyGUI

./: CMakeLists.txt
include/JagolyGUI/: Assert.hpp  ChildMulti.hpp  ChildSingle.hpp  Container.hpp  DataTypes.hpp  EnumTypes.hpp  Helpers.hpp  RenderTree.hpp  Variant.hpp  Widget.hpp
include/JagolyGUI/containers/: BoxBase.hpp  BoxH.hpp  BoxV.hpp  Frame.hpp
include/JagolyGUI/redist/: stb_truetype.hpp  utf8_cpp.hpp
include/JagolyGUI/text/: FontFace.hpp
include/JagolyGUI/widgets/: Label.hpp
source/JagolyGUI/: Container.cpp  RenderTree.cpp  Widget.cpp
source/JagolyGUI/containers/: BoxBase.cpp  BoxH.cpp  BoxV.cpp  Frame.cpp  Window.cpp
source/JagolyGUI/redist/: stb_truetype.cpp
source/JagolyGUI/widgets/: Label.cpp
